<resources>
    <string name="app_name">BroadcastBestPractice</string>
    <string name="account">Account:</string>
    <string name="input_your_account">Input your account</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="send_force_offline_broadcast">Send force offline broadcast</string>
    <string name="remember_password">Remember password</string>
</resources>
