<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1" >

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/account" />
        <EditText
            android:id="@+id/account"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_account" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/password" />
        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>
        <CheckBox
            android:id="@+id/remember_password"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/remember_password" />
    </TableRow>

    <Button
        android:id="@+id/login"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

</TableLayout>